# bose-wave-soundtouch-iv

./: .gitignore  README.SoundTouchIV-wifi.md  README.md  README.mediaplayer.md
bluetooth-setup/: bluetooth.sh  bose-bluetooth.sh
bose-firmware-ssh/: README.flash.md  README.md  RESEARCH.md  bose-usb-prep.sh
bose-firmware-ssh/docs/: DISPLAY-RESEARCH.md  STU-FORMAT.md
bose-firmware-ssh/scripts/: enable-ssh-usb.sh  ota-deploy.sh  persist-ssh.sh
bose-usb-flash/: README.flash.md  bose-usb-prep.sh
bosman-soundtouch-iv-controller/: .gitignore  CONTRIBUTING.md  LICENSE  README.SoundTouchIV-wifi.md  README.md  capacitor.config.ts  package-lock.json  package.json  postcss.config.cjs  prettier.config.mjs  svelte.config.js  tailwind.config.cjs  tailwind.config.ts  tsconfig.eslint.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.js
bosman-soundtouch-iv-controller/.junie/: guidelines.md
bosman-soundtouch-iv-controller/android/: capacitor.settings.gradle  gradle.properties
bosman-soundtouch-iv-controller/android/app/: build.gradle  capacitor.build.gradle
bosman-soundtouch-iv-controller/android/app/src/main/: AndroidManifest.xml
bosman-soundtouch-iv-controller/android/app/src/main/java/com/soundtouch/controller/: MainActivity.java  WifiInfoPlugin.java
bosman-soundtouch-iv-controller/android/app/src/main/res/values/: strings.xml
bosman-soundtouch-iv-controller/doc/: 2025.12.18-SoundTouch-Web-API.md  Bose_SoundTouch_API_v1.1.0.md  Diff.md  SoundTouch-Web-API-Short.md
bosman-soundtouch-iv-controller/gerbera/: config.xml  start.sh  stop.sh
bosman-soundtouch-iv-controller/http-scripts/: commands.http  dlna.http  info.http  keys.http  now-playing.http  presets.http  save-preset.http  soundtouch-select.http  volume.http
bosman-soundtouch-iv-controller/scripts/: configure-grapheneos-bose-wifi.sh
bosman-soundtouch-iv-controller/src/: app.css  app.d.ts  app.html
bosman-soundtouch-iv-controller/src/assets/: Bose Wave SoundTouch.pxd  SoundTouch 20.pxd  SoundTouch 30.pxd
bosman-soundtouch-iv-controller/src/lib/api/: index.ts
bosman-soundtouch-iv-controller/src/lib/bose/: discovery.ts  discoveryDlna.ts  dlna.ts  setup.ts  soundtouch.ts
bosman-soundtouch-iv-controller/src/lib/components/: BottomNav.svelte  DeviceMediaServerTab.svelte  Fader.svelte  PresetButtonGroup.svelte  WiFiSetupPanel.svelte  ZoneManager.svelte
bosman-soundtouch-iv-controller/src/lib/native/: wifiInfo.ts
bosman-soundtouch-iv-controller/src/lib/server/: dlna.ts  soundtouch.ts
bosman-soundtouch-iv-controller/src/lib/utils/: boseShared.ts  boseWebSocket.ts  fetchJson.ts
bosman-soundtouch-iv-controller/src/routes/: +layout.svelte  +page.svelte
bosman-soundtouch-iv-controller/src/routes/api/browse/: +server.ts
bosman-soundtouch-iv-controller/src/routes/api/command/[action]/[ip]/: +server.ts
bosman-soundtouch-iv-controller/src/routes/api/devices/: +server.ts
bosman-soundtouch-iv-controller/src/routes/api/dlna/browse/: +server.ts
bosman-soundtouch-iv-controller/src/routes/api/dlna/discover/: +server.ts
bosman-soundtouch-iv-controller/src/routes/api/media-servers/[ip]/: +server.ts
bosman-soundtouch-iv-controller/src/routes/api/music-service-account/: +server.ts
bosman-soundtouch-iv-controller/src/routes/api/nowplaying/[ip]/: +server.ts
bosman-soundtouch-iv-controller/src/routes/api/presets/[ip]/: +server.ts
bosman-soundtouch-iv-controller/src/routes/api/select/: +server.ts
bosman-soundtouch-iv-controller/src/routes/api/volume/[ip]/: +server.ts
bosman-soundtouch-iv-controller/src/routes/api/zone/[ip]/: +server.ts
dlna-sender/: send-display-text.py  send-to-bose.py  set-volume.py
tools/: send-to-bose.py
vlc-upnp-renderer/: CMakeLists.txt  README.md
vlc-upnp-renderer/fixtures/: bose_device_hello_world.xml
vlc-upnp-renderer/include/: upnp_cast.h  upnp_common.h  upnp_display.h  upnp_soap.h
vlc-upnp-renderer/src/: stream_out_upnp.c  upnp_cast.c  upnp_common.c  upnp_device.c  upnp_display.c  upnp_http_serve.c  upnp_soap.c
vlc-upnp-renderer/tests/: test_device_parse.c  test_display.c  test_soap.c
